--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -1,5 +1,90 @@
 
+.box{
+	color: white;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	background-color: black;
+	padding: 15px;
+	border-radius: 15px;
+	width: 20%;
+}
+fieldset{
+	border: 3px solid dodgerblue;
+}
+legend{
+	border: 1px solid white;
+	text-align: center;
+	background-color:white;
+	border-radius: 8px;
+	color: black;
+}
+.inputBox{
+	position: relative;
+}
+.inputUser{
+	background: none;
+	border: none;
+	border-bottom: 1px solid #ACD9B2;
+	outline: none;
+	color: white;
+	font-size: 15px;
+	width: 100%;
+	letter-spacing: 2px;
+	margin-top: 30px;
+}
+.labelInput{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	pointer-events: none;
+	transition: .5s;
+	margin-top: 30px;
+}
+.inputUser:focus ~ .labelInput,
+.inputUser:valid ~ .labelInput{
+	top: -20px;
+	font-size: 12px;
+	color: dodgerblue;
+}
 
+.submit{
+	background-image: linear-gradient(to right,rgb(0, 92, 197), rgb(90, 20, 220));
+	width: 100%;
+	border: none;
+	padding: 15px;
+	color: white;
+	font-size: 15px;
+	cursor: pointer;
+	border-radius: 10px;
+	margin-top: 30px;
+}
+
+.submits{
+	background-image: linear-gradient(to right, black, rgb(90, 20, 220));
+	width: 100%;
+	border: none;
+	padding: 15px;
+	color: white;
+	font-size: 15px;
+	cursor: pointer;
+	border-radius: 10px;
+	margin-top: 30px;
+}
+#submit:hover{
+	background-image: linear-gradient(to right,rgb(0, 80, 172), rgb(80, 19, 195));
+}
+
+@media (max-width: 640px) {
+	.box{
+	
+		width: 80%;
+	}
+}
+
+
+/* 
 .Login {
 	width: 100%;
 	height: 100vh;
@@ -94,4 +179,4 @@
 	.logo {
 		display: block;
 	}
-}
+} */
