--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -5,14 +5,23 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-	background-color: black;
+	background-image: linear-gradient(#ACD9B2, black);
 	padding: 15px;
 	border-radius: 15px;
 	width: 20%;
 }
 fieldset{
-	border: 3px solid dodgerblue;
+	border: 3px solid black;
 }
+
+.navlogo{
+	
+	
+	text-align: center;
+	
+	
+}
+
 legend{
 	border: 1px solid white;
 	text-align: center;
@@ -46,11 +55,11 @@ legend{
 .inputUser:valid ~ .labelInput{
 	top: -20px;
 	font-size: 12px;
-	color: dodgerblue;
+	color: black;
 }
 
 .submit{
-	background-image: linear-gradient(to right,rgb(0, 92, 197), rgb(90, 20, 220));
+	background: black;
 	width: 100%;
 	border: none;
 	padding: 15px;
@@ -62,7 +71,7 @@ legend{
 }
 
 .submits{
-	background-image: linear-gradient(to right, black, rgb(90, 20, 220));
+	background: black;
 	width: 100%;
 	border: none;
 	padding: 15px;
