--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -1,17 +1,21 @@
+
+
 .box {
 	color: white;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	background-image: linear-gradient(#ACD9B2, black);
+	background-image: linear-gradient(#8E1006, black);
 	padding: 15px;
 	border-radius: 15px;
 	width: 20%;
+	
 }
 
 fieldset {
 	border: 3px solid black;
+	
 }
 
 .navlogo {
@@ -20,15 +24,14 @@ fieldset {
 
 .logo {
 	text-align: center;
-	height: 30px;
+	height: 18px;
 }
 
 legend {
-	border: 1px solid white;
+	
 	text-align: center;
-	background-color: white;
-	border-radius: 8px;
-	color: black;
+	border-radius: 6px;
+	color: white;
 }
 
 .inputBox {
@@ -38,7 +41,7 @@ legend {
 .inputUser {
 	background: none;
 	border: none;
-	border-bottom: 1px solid #ACD9B2;
+	border-bottom: 1px solid white;
 	outline: none;
 	color: white;
 	font-size: 15px;
@@ -60,23 +63,33 @@ legend {
 .inputUser:valid~.labelInput {
 	top: -20px;
 	font-size: 12px;
-	color: black;
+	color: white;
+}
+
+.father {
+	position: relative;
 }
 
 .submit {
-	background: black;
+	background: white;
 	width: 100%;
+	display: flex;
+	justify-content: center;
 	border: none;
 	padding: 15px;
-	color: white;
+	color: #201713;
 	font-size: 15px;
 	cursor: pointer;
 	border-radius: 10px;
 	margin-top: 30px;
+
+	
 }
+
+
 
 .submits {
-	background: black;
+	background: #201713;
 	width: 100%;
 	border: none;
 	padding: 15px;
@@ -85,8 +98,23 @@ legend {
 	cursor: pointer;
 	border-radius: 10px;
 	margin-top: 30px;
+	
+	text-align: center;
 }
-
+.submitss {
+	background: white;
+	width: 100%;
+	border: none;
+	padding: 15px;
+	color: white;
+	font-size: 15px;
+	cursor: pointer;
+	border-radius: 10px;
+	margin-top: 30px;
+	
+	text-align: center;
+	
+}
 #submit:hover {
 	background-image: linear-gradient(to right, rgb(0, 80, 172), rgb(80, 19, 195));
 }
