--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,9 +1,9 @@
 :root {
 	--white: #FFFFFF;
 	--black: #000000;
-	--very-light-pink: #C7C7C7;
+	--very-light-pink: #201713;
 	--text-input-field: #F7F7F7;
-	--hospital-green: #ACD9B2;
+	--hospital-green: #8E1006;
 	--sm: 14px;
 	--md: 16px;
 	--lg: 18px;
